[gd_scene load_steps=2 format=3 uid="uid://5vq4r8fiq1qf"]

[ext_resource type="Script" uid="uid://qsrgq45rh3r7" path="res://node.gd" id="1_sy5k4"]

[node name="Node" type="Node"]
script = ExtResource("1_sy5k4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -119.0
offset_right = 149.5
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2

[node name="server_browser" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "BROWSER"

[node name="pen_test" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "PEN TEST"

[connection signal="pressed" from="Control/VBoxContainer/server_browser" to="." method="_on_server_browser_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/pen_test" to="." method="_on_pen_test_pressed"]
